--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "axios": "^1.5.0",
     "core-js": "^3.8.3",
+    "mitt": "^3.0.1",
     "vue": "^3.2.13",
-    "vue-router": "^4.2.4"
+    "vue-router": "^4.2.4",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
