--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mitt": "^3.0.1",
     "vue": "^3.2.13",
     "vue-router": "^4.2.4",
+    "vue3-carousel": "^0.3.1",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
